fix: safari z-index problem

--- a/packages/webgal/src/Components/Stage/stage.module.scss
+++ b/packages/webgal/src/Components/Stage/stage.module.scss
@@ -3,6 +3,7 @@
   height: 100%;
   position: absolute;
   z-index: 1;
+  transform: translateZ(1px);
   //animation: MainStage_showBgSoftly 100ms forwards;
   opacity: 1;
   overflow: hidden;
